--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,3 +1,8 @@
+<script>
+  function myFunction() {
+    alert('hello!');
+  }
+</script>
 <h1>I'm a character index page!</h1>
 <p><%= "Current User Signed in?:  #{user_signed_in?}" %></p>
 <% @characters.each do |character|%>
@@ -5,4 +10,6 @@
   <p><%= "Character race: #{character.race.name}"%></p>
   <p><%= "Character description: #{character.race.description}"%></p>
 <%end%>
+<button onClick='myFunction()'></button>
+<%= link_to 'Create New Character', new_character_path %>
 <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
